src/objects/GobiernoUSA_gov__kav.object
<CustomObject>
    <articleTypeChannelDisplay>
        <articleTypeTemplates>
            <channel>App</channel>
            <template>Tab</template>
        </articleTypeTemplates>
        <articleTypeTemplates>
            <channel>Prm</channel>
            <template>Tab</template>
        </articleTypeTemplates>
        <articleTypeTemplates>
            <channel>Csp</channel>
            <template>Tab</template>
        </articleTypeTemplates>
        <articleTypeTemplates>
            <channel>Pkb</channel>
            <template>Toc</template>
        </articleTypeTemplates>
    </articleTypeChannelDisplay>
    <fields>
        <fullName>Agency_Website_2__c</fullName>
        <label>Agency Website 2</label>
        <type>Url</type>
    </fields>
    <fields>
        <fullName>Agency_Website_3__c</fullName>
        <label>Agency Website 3</label>
        <type>Url</type>
    </fields>
    <fields>
        <fullName>Agency_Website_4__c</fullName>
        <label>Agency Website 4</label>
        <type>Url</type>
    </fields>
    <fields>
        <fullName>Agency_Website__c</fullName>
        <description>Related agency website.</description>
        <label>Agency Website</label>
        <type>Url</type>
    </fields>
    <fields>
        <fullName>Autopublish__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Indicator field when an article needs to be auto published.</description>
        <label>Autopublish</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>For_Use_By__c</fullName>
        <label>For Use By</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>USA.gov</fullName>
                </value>
                <value>
                    <fullName>Gobiernousa.gov</fullName>
                </value>
                <value>
                    <fullName>Kids.gov</fullName>
                </value>
                <value>
                    <fullName>Contact Center</fullName>
                </value>
                <value>
                    <fullName>Print</fullName>
                </value>
                <value>
                    <fullName>CAH</fullName>
                </value>
                <value>
                    <fullName>Print Guia</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>GobiernoUSA_gov_Article_ID__c</fullName>
        <label>GobiernoUSA.gov Article ID</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Language__c</fullName>
        <label>Language</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>English</fullName>
                    <default>true</default>
                </value>
                <value>
                    <fullName>Spanish</fullName>
                </value>
                <value>
                    <fullName>Other</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Location__c</fullName>
        <label>Location</label>
        <type>Url</type>
    </fields>
    <fields>
        <fullName>Notes__c</fullName>
        <label>Notes</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Notify_Marketing_Team__c</fullName>
        <description>Whether the marketing team 
should be notified that this digital 
asset might be worthwhile to 
highlight</description>
        <label>Notify Marketing Team</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>No</fullName>
                    <default>true</default>
                </value>
                <value>
                    <fullName>Yes</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Taxonomy__c</fullName>
        <label>Taxonomy</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Text_Asset_Body__c</fullName>
        <label>Text Asset Body</label>
        <length>131072</length>
        <type>Html</type>
    </fields>
    <label>GobiernoUSA.gov</label>
    <pluralLabel>GoviernoUSA.gov</pluralLabel>
</CustomObject>